--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <div class="container mt-5">
-  
+
 
   <div class="row">
     <div class="col-sm-8">
@@ -21,24 +21,14 @@
             </div>
             <p><%=falsestring%></p>
             <button type="submit" class="btn btn-dark">Login</button>
-            
+            <a class="btn btn-block ac" href="/auth/google" role="button">
+              <i class="fab fa-google"></i>
+            </a>
           </form>
 
         </div>
       </div>
     </div>
-
-    <!-- <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
-        </div>
-      </div>
-    </div> -->
-
   </div>
 </div>
 
