--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 <div class="container mt-5">
-  
+
 
   <div class="row">
     <div class="col-sm-8">
@@ -12,30 +12,22 @@
           <form action="/register" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" required>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" required>
             </div>
+            <p><%=falsestring%></p>
             <button type="submit" class="btn btn-dark">Register</button>
+            <a class="btn btn-block ac" href="/auth/google" role="button">
+              <i class="fab fa-google"></i>
+            </a>
           </form>
 
         </div>
       </div>
     </div>
-
-    <!-- <div class="col-sm-4">
-      <div class="card social-block">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign Up with Google
-          </a>
-        </div>
-      </div>
-    </div> -->
-
   </div>
 </div>
 
